# x-bookmarks

./: .gitignore  LICENSE  README.md  bookmark_alert.py  bookmark_export.py  bookmark_launchd.py  bookmark_mcp.py  bookmark_paths.py  bookmark_query.py  bookmark_serve.py  bookmark_sync.py  bookmark_watch.py  categorize.py  cli.py  export-bookmarks.js  extract.py  normalize.py  pyproject.toml  run.js  text_repair.py
.github/workflows/: release.yml
docs/: cli.md
docs/plans/: 2026-03-29-bookmarks-to-obsidian-design.md  2026-03-29-implementation-plan.md  README.md
scripts/: render_homebrew_formula.py
tests/: test_bookmark_alert.py  test_bookmark_mcp.py  test_bookmark_query.py  test_bookmark_sync.py  test_categorize_regex.py  test_cli.py  test_extract.py  test_launchd.py  test_runtime_paths.py  test_text_repair.py  test_watch.py
