[project]
name = "x-bookmarks"
version = "0.1.0"
description = "Shell-friendly X bookmarks pipeline and query CLI"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.86.0",
]

[project.urls]
Repository = "https://github.com/YogevKr/x-bookmarks"
Documentation = "https://github.com/YogevKr/x-bookmarks/blob/main/docs/cli.md"

[project.scripts]
x-bookmarks = "main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "cli",
    "bookmark_mcp",
    "bookmark_paths",
    "bookmark_query",
    "bookmark_serve",
    "bookmark_sync",
    "categorize",
    "extract",
    "main",
    "normalize",
    "text_repair",
]
