[project]
name = "x-bookmarks"
version = "0.1.5"
description = "Shell-friendly X bookmarks pipeline and query CLI"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
ai = [
    "anthropic>=0.86.0",
]

[project.urls]
Repository = "https://github.com/YogevKr/x-bookmarks"
Documentation = "https://github.com/YogevKr/x-bookmarks/blob/main/docs/cli.md"

[project.scripts]
x-bookmarks = "main:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "bookmark_launchd",
    "cli",
    "bookmark_mcp",
    "bookmark_paths",
    "bookmark_export",
    "bookmark_query",
    "bookmark_serve",
    "bookmark_sync",
    "bookmark_watch",
    "categorize",
    "extract",
    "main",
    "normalize",
    "text_repair",
]
